combining of several services implementation into one