@@ -3,13 +3,12 @@ package com.dynamiccarsharing.carsharing.repository.inmemory;
 import com.dynamiccarsharing.carsharing.enums.UserRole;
 import com.dynamiccarsharing.carsharing.enums.UserStatus;
 import com.dynamiccarsharing.carsharing.model.User;
-import com.dynamiccarsharing.carsharing.repository.jdbc.UserRepositoryJdbcImpl;
+import com.dynamiccarsharing.carsharing.repository.UserRepository;
 import com.dynamiccarsharing.carsharing.filter.Filter;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-public class InMemoryUserRepositoryJdbcImpl implements UserRepositoryJdbcImpl {
+public class InMemoryUserRepositoryJdbcImpl implements UserRepository {
     private final Map<Long, User> userMap = new HashMap<>();
 
     @Override
@@ -30,26 +29,26 @@ public class InMemoryUserRepositoryJdbcImpl implements UserRepositoryJdbcImpl {
 
     @Override
     public List<User> findByFilter(Filter<User> filter) {
-        return userMap.values().stream().filter(filter::test).collect(Collectors.toList());
+        return userMap.values().stream().filter(filter::test).toList();
     }
 
     @Override
-    public Iterable<User> findAll() {
-        return userMap.values();
+    public List<User> findAll() {
+        return new ArrayList<>(userMap.values());
     }
 
     @Override
     public List<User> findByRole(UserRole role) {
         return userMap.values().stream()
                 .filter(user -> user.getRole() == role)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<User> findByStatus(UserStatus status) {
         return userMap.values().stream()
                 .filter(user -> user.getStatus() == status)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -57,5 +56,10 @@ public class InMemoryUserRepositoryJdbcImpl implements UserRepositoryJdbcImpl {
         return userMap.values().stream()
                 .filter(user -> user.getContactInfo() != null && user.getContactInfo().getEmail().equalsIgnoreCase(email))
                 .findFirst();
+    }
+
+    @Override
+    public Optional<User> findWithCarsById(Long id) {
+        return Optional.empty();
     }
 }
